--- a/prática/estilos/style.css
+++ b/prática/estilos/style.css
@@ -78,6 +78,7 @@ main {
   align-items: center;
   overflow: hidden;
   max-width: 100%;
+  max-height: 700px;
   width: 100%;
   gap: 48px;
   padding-left: 64px;
