--- a/prática/estilos/style.css
+++ b/prática/estilos/style.css
@@ -77,15 +77,15 @@ main {
   display: flex;
   align-items: center;
   overflow: hidden;
+  justify-content: space-between;
   max-width: 100%;
-  max-height: 700px;
   width: 100%;
-  gap: 48px;
+  gap: 64px;
   padding-left: 64px;
 }
 
 .img1 {
-  width: 100%;
+  width: 500px;
 }
 
 .img2 {
@@ -94,8 +94,8 @@ main {
 
 .legenda {
   display: flex;
-  flex-direction: column;
   width: 100%;
+  flex-direction: column;
   gap: 8px;
 }
 
