--- a/prática/estilos/style.css
+++ b/prática/estilos/style.css
@@ -12,18 +12,19 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 36px 0px 36px 30px;
+  padding: 36px 0px 36px 72px;
 }
 
 h1 {
   font-family: "Newsreader", serif;
   color: #426b1f;
+  font-size: 32px;
   font-weight: 500;
 }
 
 nav {
   display: flex;
-  gap: 16px;
+  gap: 36px;
   padding-right: 16px;
   align-items: center;
 }
@@ -32,7 +33,7 @@ nav > a {
   text-decoration: none;
   color: black;
   font-family: "Inter", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .basket {
@@ -42,10 +43,13 @@ nav > a {
   border-radius: 6px;
 }
 
+body,
 main {
-  overflow: hidden;
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
 }
 
 .texto {
@@ -53,9 +57,8 @@ main {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 36px;
+  font-size: 64px;
   font-family: "Newsreader", sans-serif;
-  padding-top: 72px;
 }
 
 .botao {
@@ -77,15 +80,15 @@ main {
   display: flex;
   align-items: center;
   overflow: hidden;
-  justify-content: space-between;
   max-width: 100%;
   width: 100%;
-  gap: 64px;
-  padding-left: 64px;
+  gap: 82px;
+  padding-left: 82px;
+  padding-top: 20px;
 }
 
 .img1 {
-  width: 500px;
+  width: 65%;
 }
 
 .img2 {
@@ -102,4 +105,18 @@ main {
 .legenda > p {
   font-family: "Inter", sans-serif;
   font-size: 14px;
+}
+
+.texto2 {
+  display: flex;
+  text-align: justify;
+  gap: 150px;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  padding: 40px 0px 30px 82px;
+}
+
+.corno {
+  font-size: 14px;
+  white-space: nowrap;
 }
