--- a/prática/estilos/basket.css
+++ b/prática/estilos/basket.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap");
+
 * {
   margin: 0px;
   padding: 0px;
@@ -38,4 +41,201 @@ nav > a {
   color: white;
   padding: 10px 16px;
   border-radius: 6px;
+}
+
+.basket:hover {
+  color: rgb(184, 184, 184);
+  transition: 0.3s;
+}
+
+.basket:active {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+body,
+main {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+main {
+  padding: 72px;
+}
+
+.todos {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 32px;
+}
+
+.title {
+  display: flex;
+  gap: 32px;
+  align-items: baseline;
+}
+
+.title > h1 {
+  color: black;
+  font-size: 64px;
+}
+
+.linha {
+  height: 1px;
+  background-color: rgba(199, 199, 199, 0.37);
+}
+
+.title > p {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.carrinho {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.itens {
+  width: 100%;
+  height: 159px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background-color: #fafaf5;
+  border: 2px solid rgba(128, 128, 128, 0.233);
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 22px;
+  gap: 4px;
+}
+
+.nome {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nome > h1 {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  color: black;
+}
+
+.preço {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.lapis {
+  display: flex;
+  justify-content: space-between;
+  width: 128px;
+
+  background-color: white;
+  border: 2px solid rgba(128, 128, 128, 0.233);
+  border-radius: 20px;
+  padding: 8px 16px;
+}
+
+.preço > h2 {
+  color: #426b1f;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+}
+
+.preço p {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.summary {
+  display: flex;
+  width: 100%;
+}
+
+.dinheiro {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+}
+
+.order {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+  flex-direction: column;
+  gap: 28px;
+  padding: 24px;
+
+  background-color: #fafaf5;
+  border: 2px solid rgba(128, 128, 128, 0.233);
+  border-radius: 20px;
+}
+
+.order h1 {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  color: black;
+}
+
+.total {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Total {
+  display: flex;
+  justify-content: space-between;
+
+  font-weight: 600;
+}
+
+.botao {
+  display: flex;
+  justify-content: space-between;
+
+  background-color: #426b1f;
+  padding: 12px 16px;
+  border-radius: 5px;
+}
+
+.icone {
+  color: white;
+}
+
+.botao > p {
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.botao:hover {
+  background-color: #263d12;
+  color: rgb(184, 184, 184);
+  transition: 0.3s;
+}
+
+.botao:active {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
