--- a/prática/estilos/style.css
+++ b/prática/estilos/style.css
@@ -43,6 +43,16 @@ nav > a {
   border-radius: 6px;
 }
 
+.basket:hover {
+  color: rgb(184, 184, 184);
+  transition: 0.3s;
+}
+
+.basket:active {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
 body,
 main {
   height: 100%;
