--- a/prática/estilos/shop.css
+++ b/prática/estilos/shop.css
@@ -40,6 +40,10 @@ nav > a {
   font-size: 16px;
 }
 
+nav > a:hover {
+  text-decoration: underline;
+}
+
 .basket {
   background-color: #426b1f;
   color: white;
