--- a/prática/estilos/basket.css
+++ b/prática/estilos/basket.css
@@ -55,6 +55,7 @@ nav > a:hover {
 .basket:hover {
   color: rgb(184, 184, 184);
   transition: 0.3s;
+  text-decoration: none;
 }
 
 .basket:active {
